Masaustunde gerekli proje ayarlamalari(connectionString,Migration) yapildi.

--- a/HeatRequest.API/appsettings.json
+++ b/HeatRequest.API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-SL1S3RQ\\SQLEXPRESS;Database=DboHeatRequestApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-1E3KO5B\\SQLEXPRESS;Database=HeatRequestAppDbo;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
